force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Cloud__c/agf__ADM_Cloud__c.object-meta.xml
<CustomObject>
    <label>Cloud</label>
    <nameField>
        <label>Cloud Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clouds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>