force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Cloud__c/fields/agf__Cloud_Lead__c.field-meta.xml
<CustomField>
    <fullName>agf__Cloud_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clouds1</relationshipName>
    <type>Lookup</type>
</CustomField>