force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Cloud__c/fields/agf__Parent_Cloud__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Cloud__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Cloud</label>
    <referenceTo>agf__ADM_Parent_Cloud__c</referenceTo>
    <relationshipLabel>Clouds</relationshipLabel>
    <relationshipName>Clouds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>