force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Cloud__c/fields/agf__Security_Approval_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Security_Approval_Group_Name__c</fullName>
    <label>Security Approval Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>