force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Cloud__c/fields/agf__Security_Guidance__c.field-meta.xml
<CustomField>
    <fullName>agf__Security_Guidance__c</fullName>
    <label>Security Guidance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>