force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Cloud__c/fields/agf__Tertiary_Security_Contact__c.field-meta.xml
<CustomField>
    <fullName>agf__Tertiary_Security_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Security Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>As_Cloud_Tertiary_Security_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>